testing/keywords/test4.uni
main(){
	busOne= 1111000b; //valid
	out = 1011b; //error

}
neigh 
